--- a/css/output.css
+++ b/css/output.css
@@ -7,37 +7,16 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-500: oklch(63.7% 0.237 25.331);
-    --color-amber-50: oklch(98.7% 0.022 95.277);
-    --color-amber-200: oklch(92.4% 0.12 95.746);
-    --color-green-600: oklch(62.7% 0.194 149.214);
-    --color-blue-100: oklch(93.2% 0.032 255.585);
-    --color-purple-500: oklch(62.7% 0.265 303.9);
     --color-purple-950: oklch(29.1% 0.149 302.717);
-    --color-slate-50: oklch(98.4% 0.003 247.858);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-2xl: 42rem;
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
-    --text-4xl: 2.25rem;
-    --text-4xl--line-height: calc(2.5 / 2.25);
-    --text-5xl: 3rem;
-    --text-5xl--line-height: 1;
-    --text-6xl: 3.75rem;
-    --text-6xl--line-height: 1;
-    --text-7xl: 4.5rem;
-    --text-7xl--line-height: 1;
     --text-8xl: 6rem;
     --text-8xl--line-height: 1;
-    --text-9xl: 8rem;
-    --text-9xl--line-height: 1;
     --font-weight-bold: 700;
     --radius-2xl: 1rem;
-    --radius-4xl: 2rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -202,47 +181,14 @@
   .z-10 {
     z-index: 10;
   }
-  .container {
-    width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
-    }
-    @media (width >= 48rem) {
-      max-width: 48rem;
-    }
-    @media (width >= 64rem) {
-      max-width: 64rem;
-    }
-    @media (width >= 80rem) {
-      max-width: 80rem;
-    }
-    @media (width >= 96rem) {
-      max-width: 96rem;
-    }
-  }
   .mx-auto {
     margin-inline: auto;
   }
   .mt-\[30px\] {
     margin-top: 30px;
   }
-  .mt-\[50px\] {
-    margin-top: 50px;
-  }
-  .mt-\[70px\] {
-    margin-top: 70px;
-  }
-  .mt-\[80px\] {
-    margin-top: 80px;
-  }
-  .mt-\[120px\] {
-    margin-top: 120px;
-  }
   .mt-\[150px\] {
     margin-top: 150px;
-  }
-  .mt-\[200px\] {
-    margin-top: 200px;
   }
   .mt-\[250px\] {
     margin-top: 250px;
@@ -250,77 +196,14 @@
   .mt-\[300px\] {
     margin-top: 300px;
   }
-  .mt-\[350px\] {
-    margin-top: 350px;
-  }
-  .mr-\[50px\] {
-    margin-right: 50px;
-  }
-  .mr-\[60px\] {
-    margin-right: 60px;
-  }
-  .mr-auto {
-    margin-right: auto;
-  }
-  .ml-\[0px\] {
-    margin-left: 0px;
-  }
-  .ml-\[3px\] {
-    margin-left: 3px;
-  }
-  .ml-\[50\%\] {
-    margin-left: 50%;
-  }
-  .ml-\[60px\] {
-    margin-left: 60px;
-  }
-  .ml-\[100px\] {
-    margin-left: 100px;
-  }
-  .ml-\[150\] {
-    margin-left: 150;
-  }
-  .ml-\[150px\] {
-    margin-left: 150px;
-  }
-  .ml-\[160px\] {
-    margin-left: 160px;
-  }
-  .ml-\[170px\] {
-    margin-left: 170px;
-  }
   .ml-\[171px\] {
     margin-left: 171px;
-  }
-  .ml-\[175px\] {
-    margin-left: 175px;
   }
   .ml-\[177px\] {
     margin-left: 177px;
   }
-  .ml-\[180px\] {
-    margin-left: 180px;
-  }
-  .ml-\[190px\] {
-    margin-left: 190px;
-  }
   .ml-\[200px\] {
     margin-left: 200px;
-  }
-  .ml-\[250px\] {
-    margin-left: 250px;
-  }
-  .ml-\[370px\] {
-    margin-left: 370px;
-  }
-  .ml-\[380px\] {
-    margin-left: 380px;
-  }
-  .ml-\[400px\] {
-    margin-left: 400px;
-  }
-  .ml-auto {
-    margin-left: auto;
   }
   .flex {
     display: flex;
@@ -331,89 +214,26 @@
   .hidden {
     display: none;
   }
-  .table {
-    display: table;
-  }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
-  }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
-  }
-  .h-\[4\] {
-    height: 4;
-  }
-  .h-\[15px\] {
-    height: 15px;
-  }
   .min-h-screen {
     min-height: 100vh;
-  }
-  .w-900 {
-    width: calc(var(--spacing) * 900);
-  }
-  .w-\[100px\] {
-    width: 100px;
-  }
-  .w-\[300px\] {
-    width: 300px;
-  }
-  .w-\[400px\] {
-    width: 400px;
-  }
-  .w-\[450px\] {
-    width: 450px;
   }
   .w-\[500px\] {
     width: 500px;
   }
-  .w-\[600px\] {
-    width: 600px;
-  }
   .w-\[900px\] {
     width: 900px;
-  }
-  .w-\[1100px\] {
-    width: 1100px;
-  }
-  .w-\[11000px\] {
-    width: 11000px;
   }
   .w-fit {
     width: fit-content;
   }
-  .max-w-2xl {
-    max-width: var(--container-2xl);
-  }
-  .max-w-\[110\] {
-    max-width: 110;
-  }
-  .max-w-\[1100px\] {
-    max-width: 1100px;
-  }
-  .max-w-fit {
-    max-width: fit-content;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
-  }
-  .flex-col-reverse {
-    flex-direction: column-reverse;
   }
   .items-center {
     align-items: center;
@@ -430,112 +250,25 @@
   .gap-15 {
     gap: calc(var(--spacing) * 15);
   }
-  .gap-20 {
-    gap: calc(var(--spacing) * 20);
-  }
-  .gap-25 {
-    gap: calc(var(--spacing) * 25);
-  }
-  .gap-30 {
-    gap: calc(var(--spacing) * 30);
-  }
-  .gap-\[30\] {
-    gap: 30;
-  }
-  .gap-\[30px\] {
-    gap: 30px;
-  }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
-  .rounded-4xl {
-    border-radius: var(--radius-4xl);
-  }
   .rounded-\[8px\] {
     border-radius: 8px;
-  }
-  .rounded-\[16px\] {
-    border-radius: 16px;
-  }
-  .rounded-full {
-    border-radius: calc(infinity * 1px);
-  }
-  .rounded-bl-full {
-    border-bottom-left-radius: calc(infinity * 1px);
   }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
   .border-4 {
     border-style: var(--tw-border-style);
     border-width: 4px;
   }
-  .border-5 {
-    border-style: var(--tw-border-style);
-    border-width: 5px;
-  }
-  .border-6 {
-    border-style: var(--tw-border-style);
-    border-width: 6px;
-  }
-  .border-8 {
-    border-style: var(--tw-border-style);
-    border-width: 8px;
-  }
-  .border-r {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 1px;
-  }
-  .border-r-2 {
-    border-right-style: var(--tw-border-style);
-    border-right-width: 2px;
-  }
-  .border-amber-50 {
-    border-color: var(--color-amber-50);
-  }
-  .border-amber-200 {
-    border-color: var(--color-amber-200);
-  }
-  .border-green-600 {
-    border-color: var(--color-green-600);
-  }
   .border-white {
     border-color: var(--color-white);
   }
-  .border-b-blue-100 {
-    border-bottom-color: var(--color-blue-100);
-  }
-  .bg-black {
-    background-color: var(--color-black);
-  }
-  .bg-purple-500 {
-    background-color: var(--color-purple-500);
-  }
   .bg-purple-950 {
     background-color: var(--color-purple-950);
-  }
-  .bg-slate-50 {
-    background-color: var(--color-slate-50);
-  }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
-  }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
-  .p-7 {
-    padding: calc(var(--spacing) * 7);
-  }
-  .p-\[20px\] {
-    padding: 20px;
-  }
-  .pt-\[0px\] {
-    padding-top: 0px;
   }
   .pt-\[15px\] {
     padding-top: 15px;
@@ -546,29 +279,11 @@
   .pt-\[40px\] {
     padding-top: 40px;
   }
-  .pt-\[60px\] {
-    padding-top: 60px;
-  }
-  .pr-20 {
-    padding-right: calc(var(--spacing) * 20);
-  }
-  .pr-\[5px\] {
-    padding-right: 5px;
-  }
-  .pr-\[10px\] {
-    padding-right: 10px;
-  }
   .pr-\[15px\] {
     padding-right: 15px;
   }
   .pr-\[20px\] {
     padding-right: 20px;
-  }
-  .pb-20 {
-    padding-bottom: calc(var(--spacing) * 20);
-  }
-  .pb-50 {
-    padding-bottom: calc(var(--spacing) * 50);
   }
   .pb-\[20px\] {
     padding-bottom: 20px;
@@ -576,67 +291,19 @@
   .pb-\[50px\] {
     padding-bottom: 50px;
   }
-  .pl-\[5px\] {
-    padding-left: 5px;
-  }
-  .pl-\[10px\] {
-    padding-left: 10px;
-  }
   .pl-\[15px\] {
     padding-left: 15px;
   }
   .pl-\[20px\] {
     padding-left: 20px;
   }
-  .pl-\[100px\] {
-    padding-left: 100px;
-  }
-  .text-center {
-    text-align: center;
-  }
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
-  .text-3xl {
-    font-size: var(--text-3xl);
-    line-height: var(--tw-leading, var(--text-3xl--line-height));
-  }
-  .text-4xl {
-    font-size: var(--text-4xl);
-    line-height: var(--tw-leading, var(--text-4xl--line-height));
-  }
-  .text-5xl {
-    font-size: var(--text-5xl);
-    line-height: var(--tw-leading, var(--text-5xl--line-height));
-  }
-  .text-6xl {
-    font-size: var(--text-6xl);
-    line-height: var(--tw-leading, var(--text-6xl--line-height));
-  }
-  .text-7xl {
-    font-size: var(--text-7xl);
-    line-height: var(--tw-leading, var(--text-7xl--line-height));
-  }
   .text-8xl {
     font-size: var(--text-8xl);
     line-height: var(--tw-leading, var(--text-8xl--line-height));
-  }
-  .text-9xl {
-    font-size: var(--text-9xl);
-    line-height: var(--tw-leading, var(--text-9xl--line-height));
-  }
-  .text-\[4px\] {
-    font-size: 4px;
-  }
-  .text-\[6px\] {
-    font-size: 6px;
-  }
-  .text-\[20px\] {
-    font-size: 20px;
-  }
-  .text-\[40px\] {
-    font-size: 40px;
   }
   .text-\[60px\] {
     font-size: 60px;
@@ -645,28 +312,28 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
-  .text-\[px\] {
-    color: px;
-  }
   .text-white {
     color: var(--color-white);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  .filter {
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .transition-all {
     transition-property: all;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .group-data-\[mode\=HARD\]\:block {
+    &:is(:where(.group)[data-mode="HARD"] *) {
+      display: block;
+    }
+  }
+  .hover\:border-black {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--color-black);
+      }
+    }
   }
   .hover\:bg-white {
     &:hover {
@@ -692,17 +359,77 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
+@property --tw-blur {
   syntax: "*";
   inherits: false;
-  initial-value: solid;
+}
+@property --tw-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-sepia {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-color {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-drop-shadow-alpha {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-drop-shadow-size {
+  syntax: "*";
+  inherits: false;
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
+      --tw-blur: initial;
+      --tw-brightness: initial;
+      --tw-contrast: initial;
+      --tw-grayscale: initial;
+      --tw-hue-rotate: initial;
+      --tw-invert: initial;
+      --tw-opacity: initial;
+      --tw-saturate: initial;
+      --tw-sepia: initial;
+      --tw-drop-shadow: initial;
+      --tw-drop-shadow-color: initial;
+      --tw-drop-shadow-alpha: 100%;
+      --tw-drop-shadow-size: initial;
     }
   }
 }
